Added css file "styles.css" and made everything look a lot better

--- a/Recipes/Penne-alla-Vodka.html
+++ b/Recipes/Penne-alla-Vodka.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Penne alla Vodka</title>
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
     <h1>Parker's Penne alla Vodka</h1>
-    <img src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2011/11/14/2/WU-0104_penne-and-vodka_s4x3.jpg.rend.hgtvcom.826.620.suffix/1449693418767.jpeg">
+    <img class="fpic" src="https://food.fnr.sndimg.com/content/dam/images/food/fullset/2011/11/14/2/WU-0104_penne-and-vodka_s4x3.jpg.rend.hgtvcom.826.620.suffix/1449693418767.jpeg" alt="pasta picture">
 
     <p>Penne alla vodka is one of those simple recipes that has minimal ingredients but is just so delicious and satisfying. My homemade version tastes just like the dish I get at our local Italian restaurant. </p>
 
