--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Scuba's Learning Recipes</title>
+    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100&display=swap" rel="stylesheet"> 
+    <link href="https://fonts.googleapis.com/css2?family=Spline+Sans+Mono&display=swap" rel="stylesheet">
 </head>
 <body>
     <h1>Only The Best Recipes</h1>
-    <h2>Recipes:</h2>
+    <h2>now with css</h2>
+    <h3>Recipes:</h3>
     <ul>
         <li><a href="Recipes/Penne-alla-Vodka.html">Penne alla Vodka</a></li>
     </ul>
